src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-06.html-2.snap
---
source: src/main.rs
expression: result.events_as_ics()
input_file: src/fixtures/2024-06.html
---
BEGIN:VEVENT
UID:11967734045884780832@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240602T040000Z
DTEND:20240602T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
BEGIN:VEVENT
UID:7225218581161930989@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART;VALUE=DATE:20240603
DTEND;VALUE=DATE:20240603
SUMMARY:12:30~15:30 練馬総合体育館柔道場
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
BEGIN:VEVENT
UID:14218545576954401439@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240608T040000Z
DTEND:20240608T080000Z
SUMMARY:関西講習会（鳴尾浜柔道場 4時終了)
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
BEGIN:VEVENT
UID:17030259731062092164@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240609T000000Z
DTEND:20240609T080000Z
SUMMARY:鳴尾浜 柔道場 本稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
BEGIN:VEVENT
UID:3879377122344824554@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240610T040000Z
DTEND:20240610T080000Z
SUMMARY:戸田SC(2F)
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
BEGIN:VEVENT
UID:2925146369620186739@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240613T080000Z
DTEND:20240613T100000Z
SUMMARY:大宮武道館(2F)
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
BEGIN:VEVENT
UID:11109790908765265875@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240616T040000Z
DTEND:20240616T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
BEGIN:VEVENT
UID:1325210855432940407@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240617T040000Z
DTEND:20240617T080000Z
SUMMARY:上板橋
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
BEGIN:VEVENT
UID:4336424305695358867@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240623T060000Z
DTEND:20240623T080000Z
SUMMARY:大宮武道館(2F)
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
BEGIN:VEVENT
UID:8282280308099250100@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240623T040000Z
DTEND:20240623T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
BEGIN:VEVENT
UID:1266602693724823117@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240624T040000Z
DTEND:20240624T080000Z
SUMMARY:上板橋
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
BEGIN:VEVENT
UID:2659939331573324788@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240630T060000Z
DTEND:20240630T080000Z
SUMMARY:大宮武道館(2F)
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
BEGIN:VEVENT
UID:64447445299374915@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20240630T040000Z
DTEND:20240630T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202406.html
END:VEVENT
