src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-06.html.snap
---
source: src/main.rs
expression: result
input_file: src/fixtures/2024-06.html
---
MonthResult {
    year: 2024,
    month: 6,
    events: [
        Timed {
            day: 2,
            from: 13,
            to: 17,
            text: "鳴尾浜 柔道場/自主稽古",
        },
        FullDay {
            day: 3,
            text: "12:30~15:30 練馬総合体育館柔道場",
        },
        Timed {
            day: 8,
            from: 13,
            to: 17,
            text: "関西講習会（鳴尾浜柔道場 4時終了)",
        },
        Timed {
            day: 9,
            from: 9,
            to: 17,
            text: "鳴尾浜 柔道場 本稽古",
        },
        Timed {
            day: 10,
            from: 13,
            to: 17,
            text: "戸田SC(2F)",
        },
        Timed {
            day: 13,
            from: 17,
            to: 19,
            text: "大宮武道館(2F)",
        },
        Timed {
            day: 16,
            from: 13,
            to: 17,
            text: "鳴尾浜 柔道場/自主稽古",
        },
        Timed {
            day: 17,
            from: 13,
            to: 17,
            text: "上板橋",
        },
        Timed {
            day: 23,
            from: 15,
            to: 17,
            text: "大宮武道館(2F)",
        },
        Timed {
            day: 23,
            from: 13,
            to: 17,
            text: "鳴尾浜 柔道場/自主稽古",
        },
        Timed {
            day: 24,
            from: 13,
            to: 17,
            text: "上板橋",
        },
        Timed {
            day: 30,
            from: 15,
            to: 17,
            text: "大宮武道館(2F)",
        },
        Timed {
            day: 30,
            from: 13,
            to: 17,
            text: "鳴尾浜 柔道場/自主稽古",
        },
    ],
    errors: [],
}
