src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-07.html-2.snap
---
source: src/main.rs
expression: result.events_as_ics()
input_file: src/fixtures/2024-07.html
---
BEGIN:VEVENT
UID:15971843128707359173@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240701T040000Z
DTEND:20240701T080000Z
SUMMARY:上板橋
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:1188263905884747849@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240702
DTEND;VALUE=DATE:20240702
SUMMARY:モンバール合宿　出発
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:9048550040780548244@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240703
DTEND;VALUE=DATE:20240703
SUMMARY:合宿1日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:16900332140914514136@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240704
DTEND;VALUE=DATE:20240704
SUMMARY:合宿２日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:6309782575022500866@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240705
DTEND;VALUE=DATE:20240705
SUMMARY:合宿３日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:13534175804402129015@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240706
DTEND;VALUE=DATE:20240706
SUMMARY:合宿４日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:8482901618800712575@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240707
DTEND;VALUE=DATE:20240707
SUMMARY:合宿５日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:13306497420780122589@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240707T040000Z
DTEND:20240707T080000Z
SUMMARY:丹波 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:8238014642499040689@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240708
DTEND;VALUE=DATE:20240708
SUMMARY:合宿６日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:14882814694878661973@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240710
DTEND;VALUE=DATE:20240710
SUMMARY:帰国
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:6187874340981286110@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240712
DTEND;VALUE=DATE:20240712
SUMMARY:北海道稽古会　出発
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:12526801004638474278@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240713
DTEND;VALUE=DATE:20240713
SUMMARY:稽古会１日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:14945058656712151514@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240714
DTEND;VALUE=DATE:20240714
SUMMARY:稽古会２日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:3112627410297528209@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240714T040000Z
DTEND:20240714T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:3751522579926930687@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240715
DTEND;VALUE=DATE:20240715
SUMMARY:稽古会３日目
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:556273592100972271@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240715T040000Z
DTEND:20240715T080000Z
SUMMARY:上板橋（自主稽古）
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:4562581682253966713@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240718T060000Z
DTEND:20240718T080000Z
SUMMARY:大宮武道館(2F半面)
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:11401063033493718493@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240720T040000Z
DTEND:20240720T060000Z
SUMMARY:大宮武道館(2F)
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:12031527312910886542@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240721T040000Z
DTEND:20240721T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:8288311421222994375@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240722T040000Z
DTEND:20240722T080000Z
SUMMARY:上板橋
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:14687309648520904095@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240728T000000Z
DTEND:20240728T080000Z
SUMMARY:鳴尾浜 柔道場 本稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
BEGIN:VEVENT
UID:12178914869270122863@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240729T040000Z
DTEND:20240729T080000Z
SUMMARY:上板橋
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202407.html
END:VEVENT
