src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-08.html-2.snap
---
source: src/main.rs
expression: result.events_as_ics()
input_file: src/fixtures/2024-08.html
---
BEGIN:VEVENT
UID:17617546812748458346@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240804T040000Z
DTEND:20240804T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202408.html
END:VEVENT
BEGIN:VEVENT
UID:3865727699020396147@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240811T040000Z
DTEND:20240811T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202408.html
END:VEVENT
BEGIN:VEVENT
UID:9765093751248531238@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240818T040000Z
DTEND:20240818T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202408.html
END:VEVENT
BEGIN:VEVENT
UID:18420714295895148081@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240825T000000Z
DTEND:20240825T080000Z
SUMMARY:鳴尾浜 柔道場 本稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202408.html
END:VEVENT
