src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-09.html-2.snap
---
source: src/main.rs
expression: result.events_as_ics()
input_file: src/fixtures/2024-09.html
---
BEGIN:VEVENT
UID:14698893344002653406@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240901T040000Z
DTEND:20240901T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202409.html
END:VEVENT
BEGIN:VEVENT
UID:7131923015938722452@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240908T000000Z
DTEND:20240908T080000Z
SUMMARY:鳴尾浜 柔道場 本稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202409.html
END:VEVENT
BEGIN:VEVENT
UID:10505981120380001382@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240908
DTEND;VALUE=DATE:20240908
SUMMARY:（仮）
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202409.html
END:VEVENT
BEGIN:VEVENT
UID:18343419143481618268@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240913
DTEND;VALUE=DATE:20240913
SUMMARY:丹波合宿
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202409.html
END:VEVENT
BEGIN:VEVENT
UID:16031001743841349260@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240914
DTEND;VALUE=DATE:20240914
SUMMARY:丹波合宿
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202409.html
END:VEVENT
BEGIN:VEVENT
UID:264691477054273683@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240915
DTEND;VALUE=DATE:20240915
SUMMARY:丹波合宿
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202409.html
END:VEVENT
BEGIN:VEVENT
UID:14714087986874422101@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240915T040000Z
DTEND:20240915T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古（仮）
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202409.html
END:VEVENT
BEGIN:VEVENT
UID:5342661124330639029@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART;VALUE=DATE:20240916
DTEND;VALUE=DATE:20240916
SUMMARY:丹波合宿
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202409.html
END:VEVENT
BEGIN:VEVENT
UID:7545771271724948079@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240922T040000Z
DTEND:20240922T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202409.html
END:VEVENT
BEGIN:VEVENT
UID:6380761594735494815@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20240929T040000Z
DTEND:20240929T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202409.html
END:VEVENT
