src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-10.html.snap
---
source: src/main.rs
expression: result
input_file: src/fixtures/2024-10.html
---
MonthResult {
    year: 2024,
    month: 10,
    events: [
        Timed {
            day: 6,
            from: 9,
            to: 17,
            text: "鳴尾浜 柔道場 本稽古",
        },
        Timed {
            day: 20,
            from: 13,
            to: 17,
            text: "鳴尾浜 柔道場/自主稽古",
        },
    ],
    errors: [],
}
